...
                        <subviews>
                            <searchBar contentMode="redraw" misplaced="YES" placeholder="Search Movies, episodes,series " showsCancelButton="YES" showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zjN-Qa-SHB">
                                <rect key="frame" x="0.0" y="64" width="600" height="88"/>
                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                <textInputTraits key="textInputTraits"/>
                                <scopeButtonTitles>
                                    <string>All</string>
                                    <string>Movies</string>
                                    <string>Series</string>
                                    <string>Episodes</string>
                                </scopeButtonTitles>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VSs-t2-6ju">
                                <rect key="frame" x="0.0" y="153" width="600" height="447"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </tableView>
...
